# pyextract

./: .pre-commit-config.yaml  pyproject.toml
pyextract/: __init__.py  __main__.py
